--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,5 @@
-img.intro {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-h2.intro{
-  color: gray;
-  font-style: italic;
- }
-
-p.intro {
-  font-weight: bold;
-  text-align: center;
+.intro{
+    color: gray;
+    font-style: italic;
+    font-weight: bold; 
 }
